# AI-PR-Reviewer

./: .gitignore  README.md  findtheerror.py  pyproject.toml  requirements.txt  run_review.py  setup.py  sonar-project.properties  tmp.diff
.github/workflows/: build.yml  ci.yml  post-comments.yml
.scannerwork/: report-task.txt
.scannerwork/ir/python/: collected.metadata  collected.typedefs  ir_000000038.ir  ir_000000039.ir  ir_000000040.ir  ir_000000041.ir  ir_000000042.ir  ir_000000043.ir  ir_000000044.ir  ir_000000045.ir  ir_000000046.ir  ir_000000047.ir  ir_000000048.ir
.scannerwork/ucfg2/python/: all.typedefs  ucfg___init___er___init___py1.ucfg  ucfg_config_ewer_config_py6.ucfg  ucfg_diff_extractor_ckout_pr_branch.ucfg  ucfg_diff_extractor_f_extractor_py4.ucfg  ucfg_diff_extractor_or_extract_diff.ucfg  ucfg_diff_extractor_tor_get_pr_info.ucfg  ucfg_github_poster_review_comments.ucfg  ucfg_github_poster_thub_poster_py5.ucfg  ucfg_llm_reviewer_call_openai_llm.ucfg  ucfg_llm_reviewer_er_build_prompt.ucfg  ucfg_llm_reviewer_lm_reviewer_py2.ucfg  ucfg_sonar_wrapper__sonar_analysis.ucfg  ucfg_sonar_wrapper_gregate_results.ucfg  ucfg_sonar_wrapper_h_sonar_metrics.ucfg  ucfg_sonar_wrapper_n_sonar_scanner.ucfg  ucfg_sonar_wrapper_nar_wrapper_py3.ucfg
ai_code_reviewer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
output/: llm_feedback.md
reviewer/: config.py  diff_extractor.py  err.py  find_the_bugs.py  github_poster.py  llm_reviewer.py  run_review.py  sonar_wrapper.py  test.py  wheres_the_error.py
